FindBugs: Integer.valueOf
git-svn-id: http://svn.code.sf.net/p/qof-jdbc/code@170 c553a772-16ad-418b-8912-1e50f42fc919